avformat/movenc: remove experimental checks for AV1 streams
The spec has been finalized.

Signed-off-by: James Almer <jamrial@gmail.com>

--- a/Changelog
+++ b/Changelog
@@ -24,6 +24,7 @@ version <next>:
 - 1D LUT filter (lut1d)
 - RemotelyAnywhere Screen Capture decoder
 - cue and acue filters
+- support for AV1 in MP4
 
 
 version 4.0:
