lavc, doc, configure: add libxavs2 video encoder wrapper
Signed-off-by: hwren <hwrenx@126.com>

--- a/Changelog
+++ b/Changelog
@@ -26,6 +26,7 @@ version <next>:
 - cue and acue filters
 - support for AV1 in MP4
 - transpose_npp filter
+- AVS2 video encoder via libxavs2
 
 
 version 4.0:
