avfilter: add amultiply audio filter

--- a/Changelog
+++ b/Changelog
@@ -27,6 +27,7 @@ version <next>:
 - support for AV1 in MP4
 - transpose_npp filter
 - AVS2 video encoder via libxavs2
+- amultiply filter
 
 
 version 4.0:
