--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -20506,6 +20506,8 @@ each channel is displayed using the fiery color scheme
 each channel is displayed using the fruit color scheme
 @item cool
 each channel is displayed using the cool color scheme
+@item magma
+each channel is displayed using the magma color scheme
 @end table
 
 Default value is @samp{channel}.
@@ -20655,6 +20657,8 @@ each channel is displayed using the fiery color scheme
 each channel is displayed using the fruit color scheme
 @item cool
 each channel is displayed using the cool color scheme
+@item magma
+each channel is displayed using the magma color scheme
 @end table
 Default value is @samp{intensity}.
 
