--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -4171,12 +4171,15 @@ The printed times and duration are expressed in seconds.
 The filter accepts the following options:
 
 @table @option
-@item duration, d
-Set silence duration until notification (default is 2 seconds).
-
 @item noise, n
 Set noise tolerance. Can be specified in dB (in case "dB" is appended to the
 specified value) or amplitude ratio. Default is -60dB, or 0.001.
+
+@item duration, d
+Set silence duration until notification (default is 2 seconds).
+
+@item mono, m
+Process each channel separately, instead of combined. By default is disabled.
 @end table
 
 @subsection Examples
