avfilter/avf_showspectrum: add legend support to showspectrum filter

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -20730,6 +20730,9 @@ Set stop frequency to which to display spectrogram. Default is @code{0}.
 
 @item fps
 Set upper frame rate limit. Default is @code{auto}, unlimited.
+
+@item legend
+Draw time and frequency axes and legends. Default is disabled.
 @end table
 
 The usage is very similar to the showwaves filter; see the examples in that
