--- a/Changelog
+++ b/Changelog
@@ -40,6 +40,7 @@ version <next>:
 - vibrance filter
 - decoding S12M timecode in h264
 - xstack filter
+- pcm vidc decoder and encoder
 
 
 version 4.0:
